26 Mar 2014 by eqmule
- Fixed Spell[some spell].Description
  it now returns the correct string.
- Added a Slowed,Rooted,Mezzed,Crippled,Snared and Hasted
  to the TargetType TLO.
  they all return a pTargetBuffType TLO which has 3 members:
  Address (pIntType), Index (pIntType) and Duration (pTicksType).
  It also inherits pSpellType.
  This means that you can to stuff like:
  /echo ${Target.Slowed.Name} will fade in ${Target.Slowed.Duration.TotalSeconds}s
  [MQ2] Tepid Deeds will fade in 114s
  /echo ${Target} will break mezz in ${Target.Mezzed.Duration.TotalSeconds}s
  [MQ2] a_pyre_beetle48 will break mezz in 66s

24 Mar 2014 by eqmule
- Added exact match option to spawn searches (Suggested by: petesampras)
 example: /echo ${Spawn[=eqmule]} will find eqmule but not eqmulee.
- Fixed GroupMemberTargeted (this means /target clear works again)
- Added new TLO Member 'Inviter' to the character TLO. (its a pStringType)
 You can check ${Me.Invited} to see if you have a
 group invitation so I figured it would be useful
 to know who actually sent the invite:
 Usage: /echo ${Me.Inviter} just invited me to join their group
 Output: [MQ2] uberplayer00 just invited me to join their group
 

23 Mar 2014 by rswiders
- Corrected itemdisplay to show useable classes for the spell when over level 70
- Corrected to make sure cfg files are executed during refresh injections
- Additional checks for spell stacking.
  (Buffs/Songs will stack (both land) if they are benefical spells and it's some type
  of stat change that was currently causing it to fail)

22 Mar 2014 by rswiders
- Corrected useable class name in itemdisplay extension.
- Additional updates for spell effects
- Updates for spell stacking. Added .StacksWith as an alias
  for .WillStack

22 Mar 2014 by eqmule
-NOTE, THIS UPDATE WILL BREAK PLUGINS. (but not that much see below)
 SPELL struct member Level is now ClassLevel
 this was done cause i want you to know which plugins to update.