@@ -3408,7 +3408,8 @@ VOID Echo(PSPAWNINFO pChar, PCHAR szLine)
 // ***************************************************************************
 VOID LootAll(PSPAWNINFO pChar, PCHAR szLine)
 {
-    pLootWnd->LootAll=1;
-    pEverQuest->doLoot();
+	pLootWnd->LootAll(1);
+    //pLootWnd->LootAll=1;
+    //pEverQuest->doLoot();
 }
 #endif
